[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/cpp_file_editor/Scripts/File.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.87778
margin_top = 30.0
margin_bottom = -948.001
rect_min_size = Vector2( 640, 0 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="TopBar"]
margin_right = 36.0
margin_bottom = 30.0
rect_min_size = Vector2( 36, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0.501961, 1 )
text = "File"
items = [ "New File", null, 0, false, false, 0, 268435534, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Save File", null, 0, false, false, 1, 268435539, null, "", false, "Save File As", null, 0, false, false, 2, 301989971, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Open File", null, 0, false, false, 3, 268435535, null, "", false ]
switch_on_hover = true

[node name="Edit" type="MenuButton" parent="TopBar"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 30.0
rect_min_size = Vector2( 36, 0 )
text = "Edit"

[node name="Project" type="MenuButton" parent="TopBar"]
margin_left = 80.0
margin_right = 137.0
margin_bottom = 30.0
text = "Project"

[node name="NewFile" type="FileDialog" parent="."]
margin_right = 390.0
margin_bottom = 210.0
window_title = "Guardar un Archivo"
filters = PoolStringArray( "cpp", "hpp" )

[node name="OpenFile" type="FileDialog" parent="."]
margin_right = 390.0
margin_bottom = 210.0
window_title = "Abrir un Archivo"
mode = 0
filters = PoolStringArray( "*.cpp", "*.hpp" )

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="file_selected" from="NewFile" to="." method="_on_NewFile_file_selected"]
[connection signal="file_selected" from="OpenFile" to="." method="_on_OpenFile_file_selected"]
